operator/pkg/gateway-api/testdata/gateway/tlsroute-mixed-termination-same-namespace/input/tlsroute-mixed-termination-same-namespace.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-mixed-termination
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls-terminate
      port: 8883
      protocol: TLS
      hostname: tls.example.com
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-checks-certificate
    - name: tls-passthrough
      port: 8883
      protocol: TLS
      hostname: abc.example.com
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: gateway-conformance-mixed-terminateroute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-tlsroute-mixed-termination
      namespace: gateway-conformance-infra
  hostnames:
    - tls.example.com
  rules:
    - backendRefs:
        - name: tcp-backend
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: gateway-conformance-mixed-passthroughroute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-tlsroute-mixed-termination
      namespace: gateway-conformance-infra
  hostnames:
    - abc.example.com
  rules:
    - backendRefs:
        - name: tcp-backend
          port: 8443
